# ProximityManeuverSimulator

ProximityManeuverSimulator_ws/: run.sh
ProximityManeuverSimulator_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ProximityManeuverSimulator_ws/devel/: .catkin
ProximityManeuverSimulator_ws/devel/include/robosat_gazebo_ros_plugins_msgs/: GetModelProperties.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  ProximityDynamicObjectModel.h
ProximityManeuverSimulator_ws/devel/lib/pkgconfig/: robosat_description.pc  robosat_gazebo.pc  robosat_gazebo_plugins.pc  robosat_gazebo_ros_plugins.pc  robosat_gazebo_ros_plugins_msgs.pc
ProximityManeuverSimulator_ws/devel/lib/python2.7/dist-packages/robosat_gazebo_ros_plugins_msgs/msg/: _ProximityDynamicObjectModel.py  __init__.py
ProximityManeuverSimulator_ws/devel/lib/python2.7/dist-packages/robosat_gazebo_ros_plugins_msgs/srv/: _GetModelProperties.py  __init__.py
ProximityManeuverSimulator_ws/devel/share/common-lisp/ros/robosat_gazebo_ros_plugins_msgs/msg/: ProximityDynamicObjectModel.lisp  _package.lisp  _package_ProximityDynamicObjectModel.lisp  robosat_gazebo_ros_plugins_msgs-msg.asd
ProximityManeuverSimulator_ws/devel/share/common-lisp/ros/robosat_gazebo_ros_plugins_msgs/srv/: GetModelProperties.lisp  _package.lisp  _package_GetModelProperties.lisp  robosat_gazebo_ros_plugins_msgs-srv.asd
ProximityManeuverSimulator_ws/devel/share/gennodejs/ros/robosat_gazebo_ros_plugins_msgs/msg/: ProximityDynamicObjectModel.js  _index.js
ProximityManeuverSimulator_ws/devel/share/gennodejs/ros/robosat_gazebo_ros_plugins_msgs/srv/: GetModelProperties.js  _index.js
ProximityManeuverSimulator_ws/devel/share/robosat_description/cmake/: robosat_descriptionConfig.cmake
ProximityManeuverSimulator_ws/devel/share/robosat_gazebo/cmake/: robosat_gazeboConfig.cmake
ProximityManeuverSimulator_ws/devel/share/robosat_gazebo_plugins/cmake/: robosat_gazebo_pluginsConfig.cmake
ProximityManeuverSimulator_ws/devel/share/robosat_gazebo_ros_plugins/cmake/: robosat_gazebo_ros_pluginsConfig.cmake
ProximityManeuverSimulator_ws/devel/share/robosat_gazebo_ros_plugins_msgs/cmake/: robosat_gazebo_ros_plugins_msgs-msg-extras.cmake  robosat_gazebo_ros_plugins_msgs-msg-paths.cmake  robosat_gazebo_ros_plugins_msgsConfig.cmake
ProximityManeuverSimulator_ws/devel/share/roseus/ros/robosat_gazebo_ros_plugins_msgs/: manifest.l
ProximityManeuverSimulator_ws/devel/share/roseus/ros/robosat_gazebo_ros_plugins_msgs/msg/: ProximityDynamicObjectModel.l
ProximityManeuverSimulator_ws/devel/share/roseus/ros/robosat_gazebo_ros_plugins_msgs/srv/: GetModelProperties.l
ProximityManeuverSimulator_ws/src/robosat_description/: CMakeLists.txt
ProximityManeuverSimulator_ws/src/robosat_description/urdf/: macros.xacro  robosat.xacro  robosat_desc_bkp.gazebo
ProximityManeuverSimulator_ws/src/robosat_gazebo/: CMakeLists.txt
ProximityManeuverSimulator_ws/src/robosat_gazebo/launch/: default_sim.launch
ProximityManeuverSimulator_ws/src/robosat_gazebo/models/ISS/: model.config  model.sdf
ProximityManeuverSimulator_ws/src/robosat_gazebo/models/marker/: model.sdf
ProximityManeuverSimulator_ws/src/robosat_gazebo/models/sphere/: model.config  model.sdf
ProximityManeuverSimulator_ws/src/robosat_gazebo/worlds/: cholessy_wiltshire.world
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_plugins/: CMakeLists.txt
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_plugins/include/robosat_gazebo_plugins/: ProximityDynamicModel.hh  ProximityDynamicObjectPlugin.hh
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_plugins/msgs/: Double.proto
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_plugins/src/: ProximityDynamicModel.cc  ProximityDynamicObjectPlugin.cc  WorldBasePhysics.cc
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_ros_plugins/: CMakeLists.txt
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_ros_plugins/include/: ProximityDynamicObjectROSPlugin.hh
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_ros_plugins/src/: ProximityDynamicObjectROSPlugin.cc
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_ros_plugins_msgs/: CMakeLists.txt  package.xml
ProximityManeuverSimulator_ws/src/robosat_gazebo_plugins/robosat_gazebo_ros_plugins_msgs/srv/: GetModelProperties.srv
trash/robosat_gazebo_ros_plugins/: CMakeLists.txt  package.xml
trash/robosat_gazebo_ros_plugins/include/: ProximityDynamicObjectROSPlugin.hh
trash/robosat_gazebo_ros_plugins/src/: ProximityDynamicObjectROSPlugin.cc
