<?xml version="1.0"?>
<package format="2">
  <name>robosat_gazebo_ros_plugins</name>
  <version>0.6.13</version>
  <description>
      Proximity Dynamic Simulator's extended ROS plugins for generation of the necessary
      ROS services and topics during the simulation.
  </description>

  <maintainer email="matteob.86@gmail.com">Matteo Baiguera</maintainer>
 
  <author email="matteob.86@gmail.com">Matteo Baiguera</author>


  <license>Apache-2.0</license>
  
  <!--
    <depend>robosat_gazebo_plugins</depend>
 

  <depend>uuv_gazebo_ros_plugins_msgs</depend>
  -->
  <depend>robosat_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>gazebo_dev</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>robosat_gazebo_plugins</buildtool_depend>
  <!--
  <exec_depend> robosat_gazebo_plugins </exec_depend>
-->
</package>