<?xml version="1.0"?>
<package format="2">
  <name>robosat_gazebo_ros_plugins_msgs</name>
  <version>0.6.13</version>
  <description>The robosat_gazebo_ros_plugins_msgs package</description>

  <maintainer email="matteob.86@gmail.com">Matteo Baiguera</maintainer>
  <author email="matteob.86@gmail.com">Matteo Baiguera</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
